drawing and panning working again, mostly

--- a/map.html
+++ b/map.html
@@ -27,6 +27,6 @@ document.getElementById("map6").onload=function(){
   viewCenter = {x: 0, y: 0};
 </script>
 <script src="./js/getmaps.js"></script>
-<script src="./js/panmap.js"></script>
+<!-- <script src="./js/panmap.js"></script> -->
 </body>
 </html>
