Closes #10, draw order to cover "map_x" text

--- a/map.html
+++ b/map.html
@@ -4,9 +4,11 @@
 <!--   // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 </head>
 <body>
-
-<span id="getmapdata" style="cursor: pointer; text-decoration: underline">
-  load map
+<span id="mapcontrols">
+    <label><input type="checkbox" id="structureToggle"> Structures</label>
+    <span id="getmapdata" style="cursor: pointer; text-decoration: underline">
+      load map
+    </span>
 </span>
 <span id="debugarea">debug area</span>
 <canvas id="mapCanvas" width="800" height="800" style="border:1px solid #d3d3d3;">
