Closes #5, display cursor coordinates

--- a/map.html
+++ b/map.html
@@ -5,14 +5,14 @@
 </head>
 <body>
 <span id="mapcontrols">
-    <label><input type="checkbox" id="structureToggle"> Structures</label>
+    <label><input type="checkbox" id="structureToggle"> Structures</label><br>
     <span id="getmapdata" style="cursor: pointer; text-decoration: underline">
       load map
     </span>
-</span>
-<span id="debugarea">debug area</span>
-<canvas id="mapCanvas" width="800" height="800" style="border:1px solid #d3d3d3;">
-Your browser does not support the HTML5 canvas tag.</canvas>
+</span><br>
+<canvas id="mapCanvas" width="500" height="400" style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.</canvas><br>
+<span id="coorddisplay"></span>
 <!-- 
 <img id="map6" src="http://dogtato.net/minecraft/images/8/84/Map_6.png" alt="Map 6" width="536" height="535">
 <script type="text/javascript">
