Caching wiki query results in mysql with php, js directory cleanup, category hierarchy traversing

--- a/map.html
+++ b/map.html
@@ -13,6 +13,7 @@
 <canvas id="mapCanvas" width="500" height="400" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas><br>
 <span id="coorddisplay"></span>
+<span id="debugarea"></span>
 <!-- 
 <img id="map6" src="http://dogtato.net/minecraft/images/8/84/Map_6.png" alt="Map 6" width="536" height="535">
 <script type="text/javascript">
