Moved wiki and db interactions into their own files

--- a/map.html
+++ b/map.html
@@ -29,7 +29,7 @@ document.getElementById("map6").onload=function(){
  <script type="text/javascript">
   viewCenter = {x: 0, y: 0};
 </script>
-<script src="./js/getmaps.js"></script>
+<script src="./js/drawMap.js"></script>
 <!-- <script src="./js/panmap.js"></script> -->
 </body>
 </html>
