closes #8 zooming, adds ability to click on features

--- a/map.html
+++ b/map.html
@@ -8,6 +8,13 @@
     <label><input type="checkbox" id="structureToggle"> Structures</label><br>
     <span id="getmapdata" style="cursor: pointer; text-decoration: underline">
       load map
+    </span><br>
+    Zoom:
+    <span id="zoom_out" style="cursor: pointer; text-decoration: underline">
+      -
+    </span>
+    <span id="zoom_in" style="cursor: pointer; text-decoration: underline">
+      +
     </span>
 </span><br>
 <canvas id="mapCanvas" width="1000" height="600" style="border:1px solid #d3d3d3;">
