Added mouseover box at cursor position

--- a/map.html
+++ b/map.html
@@ -24,8 +24,9 @@
   <span id="coorddisplay"></span>
 </span>
 <span id="categories"></span>
-<span id="featureinfo"></span><br>
+<span id="featureinfo"></span>
 <span id="debugarea"></span>
+<span id="mouseoverbox"></span>
 
 <script src="./js/drawMap.js"></script>
 </body>
