Complete but non-working OO version

--- a/map.html
+++ b/map.html
@@ -31,6 +31,6 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
 <span id="debugarea"></span>
 <span id="mouseoverbox"></span>
 
-<script src="./js/drawMap.js"></script>
+<script src="./js/drawMapOO.js"></script>
 </body>
 </html>
