--- a/map.html
+++ b/map.html
@@ -6,10 +6,8 @@
 <!--   // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 </head>
 <body>
-<span id="mapcontrols">
-  <span id="getmapdata" style="cursor: pointer; text-decoration: underline">
-    reload map
-  </span><br>
+<div id="mapcontrols">
+  <div id="getmapdata" style="cursor: pointer; text-decoration: underline">reload map</div>
   Zoom:
   <span id="zoom_out" style="cursor: pointer; text-decoration: underline">
     -
@@ -17,19 +15,20 @@
   <span id="zoom_in" style="cursor: pointer; text-decoration: underline">
     +
   </span>
-</span><br>
+</div><br>
 <canvas id="mapCanvas" width="800" height="600">
 Your browser does not support the HTML5 canvas tag.</canvas>
-<span id="coorddisplay"></span>
-<span id="categories"></span>
-<span id="featureinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+<div id="coorddisplay"></div>
+<div id="categories"></div>
+<div id="addFeature" style="cursor: pointer; text-decoration: underline">Add Feature</div>
+<div id="featureinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-<span id="debugarea"></span>
-<span id="mouseoverbox"></span>
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+<div id="debugarea"></div>
+<div id="mouseoverbox"></div>
 
 <script src="./js/drawMap.js"></script>
 </body>
