--- a/map.html
+++ b/map.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="./style.css">
-<script src="./js/jquery-1.10.2.js"></script>
-<!--   // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+  <!-- third party javascript -->
+  <script src="./js/jquery-1.10.2.js"></script>
+  <script src="./js/jquery.form.js"></script>
+  <!--   // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 </head>
 <body>
 <div id="mapcontrols">
