Closes #31 mouse scroll zoom using jquery.mousewheel.js

--- a/map.html
+++ b/map.html
@@ -5,6 +5,7 @@
   <!-- third party javascript -->
   <script src="./js/jquery-1.10.2.js"></script>
   <script src="./js/jquery.form.js"></script>
+  <script src="./js/jquery.mousewheel.js"></script>
   <!--   // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 </head>
 <body>
