stopgap method of adding data, slow network tolerance
Forms for adding data are wrapped in an iframe so they won't
hijack the page. Added checks that map and feature images are loaded
before trying to draw them.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
   <!-- third party javascript -->
   <script src="./js/jquery-1.10.2.js"></script>
-  <script src="./js/jquery.form.js"></script>
   <script src="./js/jquery.mousewheel.js"></script>
+<!--   <script src="./js/jquery.form.js"></script> -->
   <!--   // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 </head>
 <body>
@@ -23,7 +23,7 @@
 Your browser does not support the HTML5 canvas tag.</canvas>
 <div id="coorddisplay"></div>
 <div id="categories"></div>
-<div id="addFeature" style="cursor: pointer; text-decoration: underline">Add Feature</div>
+<div id="addData">Add: <span id="addFeature" style="cursor: pointer; text-decoration: underline">Feature</span>, <span id="addCategory" style="cursor: pointer; text-decoration: underline">Category</span>, <span id="addMap" style="cursor: pointer; text-decoration: underline">Map</span></div>
 <div id="featureinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
