--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
 <div id="mapcontrols">
-  <div id="getmapdata" style="cursor: pointer; text-decoration: underline">reload map</div>
+  <div id="reloaddata" style="cursor: pointer; text-decoration: underline">reload map</div>
   Zoom:
-  <span id="zoom_out" style="cursor: pointer; text-decoration: underline">
+  <span id="zoomout" style="cursor: pointer; text-decoration: underline">
     -
   </span>
-  <span id="zoom_in" style="cursor: pointer; text-decoration: underline">
+  <span id="zoomin" style="cursor: pointer; text-decoration: underline">
     +
   </span>
 </div><br>
-<canvas id="mapCanvas" width="800" height="600">
+<canvas id="mapcanvas" width="800" height="600">
 Your browser does not support the HTML5 canvas tag.</canvas>
 <div id="coorddisplay"></div>
 <div id="categories"></div>
-<div id="addData">Add: <span id="addFeature" style="cursor: pointer; text-decoration: underline">Feature</span>, <span id="addCategory" style="cursor: pointer; text-decoration: underline">Category</span>, <span id="addMap" style="cursor: pointer; text-decoration: underline">Map</span></div>
+<div id="adddata">Add: <span id="addfeature" style="cursor: pointer; text-decoration: underline">Feature</span>, <span id="addcategory" style="cursor: pointer; text-decoration: underline">Category</span>, <span id="addmap" style="cursor: pointer; text-decoration: underline">Map</span><br><span id="updatedata" style="cursor: pointer; text-decoration: underline">really reload map</span></div>
 <div id="featureinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
