Closes #37 better wiki form integration

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <!-- third party javascript -->
   <script src="./js/jquery-1.10.2.js"></script>
   <script src="./js/jquery.mousewheel.js"></script>
-<!--   <script src="./js/jquery.form.js"></script> -->
+  <script src="./js/jquery.form.js"></script>
+  <!-- <script src="./js/jquery-ui-1.10.3.custom.js"></script> -->
   <!--   // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 </head>
 <body>
@@ -36,16 +37,12 @@ Your browser does not support the HTML5 canvas tag.</canvas>
         <span id="addcategory" class="links">Category</span>,
         <span id="addmap" class="links">Map</span><br>
       </div>
+      <div id="editprompt"></div>
     </div>
   </div>
 </div>
 <div id="updatedata" class="links">update data from wiki</div>
-<div id="featureinfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+<div id="featureinfo"></div>
 <div id="debugarea"></div>
 <div id="mouseoverbox" class="overlayitem"></div>
 
