--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- <canvas id="mapcanvas" width="800" height="600"> -->
 <!-- <canvas id="mapcanvas" width="100%" height="100%"> -->
 <!-- Your browser does not support the HTML5 canvas tag.</canvas> -->
-<div id="mapoverlay">
+<!-- <div id="mapoverlay"> -->
   <div id="mapcontrols" class="overlayitem">
     <!-- <div id="reloaddata" class="links">reload map</div>
     Zoom: -->
@@ -49,7 +49,7 @@
       <div id="editprompt"></div>
     </div>
   </div>
-</div>
+<!-- </div> -->
 <div id="featureinfo"></div>
 <div id="debugarea"></div>
 <div id="mouseoverbox" class="overlayitem"></div>
