--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <script src="./js/drawMap.js"></script>
 </head>
 <body>
-<svg id="mapcanvas">
+<svg id="mapCanvas">
     <g id="mapImageGroup"></g>
     <g id="featureGroup"></g>
 </svg>
-<!-- <canvas id="mapcanvas" width="800" height="600"> -->
-<!-- <canvas id="mapcanvas" width="100%" height="100%"> -->
+<!-- <canvas id="mapCanvas" width="800" height="600"> -->
+<!-- <canvas id="mapCanvas" width="100%" height="100%"> -->
 <!-- Your browser does not support the HTML5 canvas tag.</canvas> -->
 <!-- <div id="mapoverlay"> -->
   <div id="mapcontrols" class="overlayitem">
