--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 <div id="mouseoverbox" class="overlayitem"></div>
 <div id="boundFeatureInfo" class="overlayitem">
-  <div class="featureInfoTitle"></div>
+  <span class="featureInfoTitle"></span>
+  <a href="#" class="featureInfoClose">close</a>
   <div class="featureInfoBody"></div>
 </div>
 
