Rewrote feature list generation to use d3

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div id="coorddisplay" class="overlayitem">x: z:</div>
 <div id="upperrightcontrols">
 <div id="layerbox" class="overlayitem">
-  <div id="layerheader" class="links"><right>Map Layers</right></div>
+  <div id="layerheader" class="links"><right>Map Contents</right></div>
   <div id="layerlist"></div>
 </div>
 <div id="editbox" class="overlayitem">
