--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 <div id="mouseoverbox" class="overlayitem"></div>
 <div id="boundFeatureInfo" class="overlayitem">
   <span class="featureInfoTitle"></span>
+  <a href="#" class="featureInfoOpen">open</a>
+  <a href="#" class="featureInfoEdit">edit</a>
   <a href="#" class="featureInfoClose">close</a>
   <div class="featureInfoBody"></div>
 </div>
