Implemented link to open wiki page for a feature in a new window/tab

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 <div id="mouseoverbox" class="overlayitem"></div>
 <div id="boundFeatureInfo" class="overlayitem">
   <span class="featureInfoTitle"></span>
-  <a href="#" class="featureInfoOpen">open</a>
+  <!-- href set by js -->
+  <a target="_blank" class="featureInfoOpen">open</a>
   <a href="#" class="featureInfoEdit">edit</a>
   <a href="#" class="featureInfoClose">close</a>
   <div class="featureInfoBody"></div>
