Cleanup, standardizing html capitalization

--- a/index.html
+++ b/index.html
@@ -19,36 +19,36 @@
   <g id="featureGroup"></g>
 </svg>
 
-<div id="mapcontrols" class="overlayitem">
+<div id="mapControls" class="overlayItem">
   <!-- <div id="reloaddata" class="links">reload map</div>
   Zoom: -->
-  <div id="updatedata" class="links">refresh</div>
-  <button id="zoomout">
+  <div id="updateData" class="links">refresh</div>
+  <button id="zoomOut">
     -
   </button>
-  <button id="zoomin">
+  <button id="zoomIn">
     +
   </button>
 </div>
-<div id="coorddisplay" class="overlayitem">x: z:</div>
-<div id="upperrightcontrols">
-<div id="layerbox" class="overlayitem">
-  <div id="layerheader" class="links"><right>Map Contents</right></div>
-  <div id="layerlist"></div>
+<div id="coordDisplay" class="overlayItem">x: z:</div>
+<div id="upperRightControls">
+<div id="layerBox" class="overlayItem">
+  <div id="layerHeader" class="links"><right>Map Contents</right></div>
+  <div id="layerList"></div>
 </div>
-<div id="editbox" class="overlayitem">
-  <div id="editheader" class="links"><right>Add/Edit Data</right></div>
-  <div id="editlist">
-    <span id="addfeature" class="links">Feature</span>,
-    <span id="addcategory" class="links">Category</span>,
-    <span id="addmap" class="links">Map</span>
+<div id="editBox" class="overlayItem">
+  <div id="editHeader" class="links"><right>Add/Edit Data</right></div>
+  <div id="editList">
+    <span id="addFeature" class="links">Feature</span>,
+    <span id="addCategory" class="links">Category</span>,
+    <span id="addMap" class="links">Map</span>
   </div>
-  <div id="editprompt"></div>
+  <div id="editPrompt"></div>
 </div>
 </div>
 
-<div id="mouseoverbox" class="overlayitem"></div>
-<div id="boundFeatureInfo" class="overlayitem">
+<div id="mouseoverBox" class="overlayItem"></div>
+<div id="boundFeatureInfo" class="overlayItem">
   <span class="featureInfoTitle"></span>
   <!-- href set by js -->
   <a target="_blank" class="featureInfoOpen">open</a>
